[package]
name = "clock-rs"
authors = ["Oughie <oughery@gmail.com>"]
description = "A modern, terminal-based digital clock"
keywords = ["clock", "terminal", "time", "cli", "date"]
categories = ["date-and-time", "command-line-interface"]
exclude = ["pubic/*"]
repository = "https://github.com/Oughie/clock-rs"
homepage = "https://github.com/Oughie/clock-rs"
readme = "README.md"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

