[package]
name = "clock-rs"
version = "0.1.206"
authors = ["Oughie <oughery@gmail.com>"]
description = "A modern, terminal-based digital clock"
keywords = ["clock", "terminal", "time", "cli", "date"]
categories = ["date-and-time", "command-line-interface"]
exclude = ["public/*"]
repository = "https://github.com/Oughie/clock-rs"
homepage = "https://github.com/Oughie/clock-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
